css/style.css
/* ... */
.popup-form{
    margin: 0 auto;
    width: 100%;
    max-width: 300px;
    padding: 0;
}

.popup-form .forgot-lnk {
    display: block;
    margin: -15px 0 15px;
    font-size: 14px;
    color:var(--main-black);
    text-decoration: underline;
}

.popup-form .orDeco {
    position: relative;
}

.popup-form .orDeco::after {
    content: "";
    position: absolute;
    left: 5px;
    right: 5px;
    top: 50%;
    z-index: 0;
    border-bottom: 1px solid #e7e7e7;
}

.popup-form .orDeco span {
    position: relative;
    z-index: 1;
    display: inline-block;
    padding: 5px 10px;
    background-color: #fff;
}

.popup-form .error {
    color: #ff0000;
    font-size: 12px;
}

#forgotPassword .popup-form .form-group{
    margin: 30px 0;
}

#restorePassword .icon-close {
    top:15px;
    right: 15px;
}

.modal-main-title {
    padding: 40px 0 0 0;
}

.modal-main-title h3 {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    text-transform: uppercase;
}

.modal-main-title .icon-close {
    position: absolute;
    top: 30px;
    right: 30px;
    font-size: 24px;
    cursor: pointer;
}

.modal-main-title .icon-account {
    font-size: 32px;
}

@media screen and (max-width:768px){
    .phone a {
        font-size: 0px;
    }

    .main-info .price > a,
    .main-info .price > a b {
        font-size: 0px;
    }

    .shirtsID {
        text-align: center;
    }

    .characteristicks dl {
        grid-template-columns: 140px 1fr;
    }

    .lang.dropdown {
        position: absolute;
        left: calc(10% + (10% - 50px));
    }

    .lang .dropdown-menu.show {
        left: 0 !important;
    }

    .product-title .readmore.showed {
        display: none;
    }

    .product-title .aboutmore.showed {
        display: inline-block;
    }

    .product-title p:first-of-type {
        display: none;
    }

    .slogan-main {
        width: 100%;
    }

    .slogan-main h1 {
        font-size: 26px;
    }

    .other-slogans h2 {
        font-size: 21px;
    }
    .other-slogans h3,
    .other-slogans h4 {
        font-size: 17px;
    }
    .tab-element .block-title {
        display: none;
    }
    .page-title {
        padding: 15px 0;
    }
    .page-title h1 {
        font-size: 22px;
        margin: 0;
    }
    footer .logo {
        margin: 0;
    }
    .order-table .table-row {
        grid-template-columns: 1fr 1fr;
    }
    .order-table .table-cell.withShirtsID {
        grid-column-start: 1;
    }
    .order-table .table-cell.all {
        text-align: left;
    }
    .wrap-block {
        padding: 20px 0 0 0;
    }
    .header-row p {
        font-size: 15px;
    }
    .shirtsID-container .logo {
        max-width: 165px;
        margin-bottom: 10px;
    }
    .shirtsID-container {
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .shirtsID-row {
        padding: 10px 0;
    }
}

@media screen and (max-width:576px){
    .home-wrapper {
        padding-top:20px;
    }
    .left-shirt-side .other-slogans {
        text-align: left;
    }
    .other-slogans,
    .other-slogans.right-pd40 {
        padding-right: 35%;
    }

    .main-shirt-block {
        position: absolute;
        right: -120px;
        width: 300px;
    }

    .other-slogans {
        margin-bottom: 15px;
    }
    .tab-wrapper .tab-element {
        display: none;
    }
    .tab-wrapper .tab-element.active {
        display: block;
    }

    .apply-settings {
        padding: 20px 0;
    }

    .apply-center,
    .apply-left,
    .apply-right {
        flex:0 0 300px;
        text-align: center;
        margin:0 0 15px 0;
    }
}

@media screen and (max-width:992px){
    .left-shirt-side {
        position: relative;
        left: 0;
    }

    .settings-container {
        grid-template-columns: 1fr;
    }
}

@media screen and (max-width:1200px){
    .order-table-history .table-row {
        display: block;
    }
    .order-table-history .table-row:first-of-type{
        display: none;
    }
    .order-table-history .table-cell {
        padding: 10px;
    }
    .order-table-history .table-cell.date {
        text-align: left;
    }
    .order-table-history .table-cell.all {
        display: block;
    }
    .order-table-history .table-cell.all div {
        display: flex;
        justify-content: space-between;
    }
    .order-table-history .table-cell.all div p {
        order:2;
    }
    .size-params-row {
        display: block;
    }

    .size-range-block.active {
        display: block;
    }
}

@-webkit-keyframes pulse {
    0% { top:0; }
    50% { top:10px; }
    100% { top:0; }
  }
  
@keyframes pulse {
    0% { top:0; }
    50% { top:10px; }
    100% { top:0; }
}


@-webkit-keyframes jumping {
    0% { transform: translateY(0px) scale(1); }
    5% { transform: translateY(-5px) scale(1.05);}
    10% { transform: translateY(0px) scale(1); }
}
  
@keyframes jumping {
    0% { transform: translateY(0px) scale(1); }
    5% { transform: translateY(-5px) scale(1.05);}
    10% { transform: translateY(0px) scale(1); }
}

